@@ -1,6 +1,5 @@
 *** nearest release ***
   ! fix Drag&Drop under Windows 7
-  ! fix crash when language is not sellected in options dialog
 
 *** next release ***
   ! load all files selected in file menager (ie. Thunar) in just 1 instance of SIR
